20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/scss/form.scss
+++ b/Template_Angular7/ClientApp/src/app/components/scss/form.scss
@@ -1,4 +1,5 @@
 $radius: 5px;
+$color-label: rgba(70, 89, 240, 0.99);
 
 
 * {
@@ -36,7 +37,7 @@ $radius: 5px;
   }
 
   .title {
-    color: rgba(240, 80, 19, 0.99);
+    color: $color-label;
     text-align: center;
     font-family: Tahoma, Geneva, sans-serif;
     //font-size: 20px;
