20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.css
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.css
@@ -1,5 +1,7 @@
 .gruppe-edit {
   width: 100%; }
+  .gruppe-edit .main-nav {
+    display: block; }
   @media (max-width: 767px) {
     .gruppe-edit {
       width: 100%; } }
