--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -1,3 +1,6 @@
+.main-nav {
+  height: 70px; }
+
 .navbar-image {
   position: relative;
   top: 0;
@@ -6,14 +9,12 @@
   z-index: 1;
   margin: 15px 10px 15px 0px; }
 
-@media (min-width: 768px) {
+@media (min-width: 576px) {
   .main-nav {
     top: 0px;
     width: 100%;
     min-width: 180px; }
     .main-nav .navbar {
-      border-radius: 5px 5px 5px 5px;
-      border-width: 5px;
       height: 50px; }
       .main-nav .navbar ul {
         float: left; }
