--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,4 +1,4 @@
-<div class="main-nav">
+<div *ngIf="nav.visible" class="main-nav">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <a class="navbar-image" [routerLink]="['/home']">
       <img src="/dist/logo.png" alt="Gruppenplaner"/>
