20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/scss/form.scss
+++ b/Template_Angular7/ClientApp/src/app/components/scss/form.scss
@@ -9,10 +9,6 @@ $color-label: rgba(70, 89, 240, 0.99);
   float: left;
 }
 
-/*.main-nav {
-  display: none;
-}*/
-
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
@@ -60,22 +56,6 @@ $color-label: rgba(70, 89, 240, 0.99);
   }
 }
 
-/*.main-nav {
-  display: none;
-}*/
-
-/*.navbar {
-  //display: none;
-  !*overflow: hidden;
-  background-color: rgba(29, 61, 84, 0.1);
-
-  bottom: 0;
-  width: 100%;
-  height: 38px;
-
-  border-bottom-left-radius: $radius;
-  border-bottom-right-radius: $radius;*!
-}*/
 
 .form-debug-info {
   background-color: rgba(240, 225, 4, 0.13);
@@ -129,10 +109,10 @@ $color-label: rgba(70, 89, 240, 0.99);
   }
 }
 
-
+/* Auflösung > 576px */
 @media (min-width: 576px) {
 
-  $radius: 5px;
+  $radius: 15px;
 
   * {
     box-sizing: border-box;
@@ -155,9 +135,21 @@ $color-label: rgba(70, 89, 240, 0.99);
   .col-11 {width: 91.66%;}
   .col-12 {width: 100%;}
 
-  .main-nav {
+  /*.main-nav {
     display: block;
   }
+
+  .navbar {
+    overflow: hidden;
+    background-color: rgba(5, 162, 15, 0.53);
+
+    bottom: 0;
+    width: 100%;
+    height: 81px;
+
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }*/
 
   .edit_form {
     background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
@@ -199,18 +191,6 @@ $color-label: rgba(70, 89, 240, 0.99);
       font-family: Arial, serif;
       font-style: normal;
     }
-  }
-
-  .navbar {
-    overflow: hidden;
-    background-color: rgba(29, 61, 84, 0.1);
-
-    bottom: 0;
-    width: 100%;
-    height: 38px;
-
-    border-bottom-left-radius: $radius;
-    border-bottom-right-radius: $radius;
   }
 
   .form-debug-info {
