--- a/Template_Angular7/ClientApp/src/app/components/scss/form.css
+++ b/Template_Angular7/ClientApp/src/app/components/scss/form.css
@@ -1,12 +1,10 @@
+@charset "UTF-8";
 * {
   box-sizing: border-box; }
 
 [class*="col-"] {
   float: left; }
 
-/*.main-nav {
-  display: none;
-}*/
 .col-1 {
   width: 8.33%; }
 
@@ -68,21 +66,6 @@
     font-style: normal;
     float: left; }
 
-/*.main-nav {
-  display: none;
-}*/
-/*.navbar {
-  //display: none;
-  !*overflow: hidden;
-  background-color: rgba(29, 61, 84, 0.1);
-
-  bottom: 0;
-  width: 100%;
-  height: 38px;
-
-  border-bottom-left-radius: $radius;
-  border-bottom-right-radius: $radius;*!
-}*/
 .form-debug-info {
   background-color: rgba(240, 225, 4, 0.13);
   margin-top: 10px;
@@ -125,6 +108,7 @@
     font-family: Arial, serif;
     font-style: normal; }
 
+/* Auflösung > 576px */
 @media (min-width: 576px) {
   * {
     box-sizing: border-box; }
@@ -168,9 +152,21 @@
   .col-12 {
     width: 100%; }
 
-  .main-nav {
-    display: block; }
+  /*.main-nav {
+    display: block;
+  }
 
+  .navbar {
+    overflow: hidden;
+    background-color: rgba(5, 162, 15, 0.53);
+
+    bottom: 0;
+    width: 100%;
+    height: 81px;
+
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }*/
   .edit_form {
     background: -webkit-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
     background: -moz-linear-gradient(bottom, #CCCCCC, #EEEEEE 175px);
@@ -183,7 +179,7 @@
     font-weight: bold;
     color: rgba(82, 174, 240, 0.99);
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 0px;
     border: 1px solid rgba(153, 153, 153, 0.51);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); }
@@ -195,8 +191,8 @@
       padding: 10px;
       border-width: 5px;
       border-color: rgba(82, 174, 240, 0.99);
-      border-top-right-radius: 5px;
-      border-top-left-radius: 5px;
+      border-top-right-radius: 15px;
+      border-top-left-radius: 15px;
       background-color: rgba(82, 174, 240, 0.43);
       margin-bottom: 15px; }
     .edit_form label {
@@ -205,15 +201,6 @@
       font-size: 16px;
       font-family: Arial, serif;
       font-style: normal; }
-
-  .navbar {
-    overflow: hidden;
-    background-color: rgba(29, 61, 84, 0.1);
-    bottom: 0;
-    width: 100%;
-    height: 38px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px; }
 
   .form-debug-info {
     background-color: rgba(240, 225, 4, 0.13);
@@ -227,7 +214,7 @@
     font-weight: bold;
     color: rgba(43, 43, 43, 0.99);
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3); }
     .form-debug-info .innerbody {
       padding: 0px 15px 15px 15px; }
@@ -239,8 +226,8 @@
       padding: 10px;
       border-width: 5px;
       border-color: rgba(240, 202, 79, 0.99);
-      border-top-right-radius: 5px;
-      border-top-left-radius: 5px;
+      border-top-right-radius: 15px;
+      border-top-left-radius: 15px;
       background-color: rgba(240, 155, 44, 0.2);
       margin-bottom: 15px; }
     .form-debug-info .help-block {
