--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,7 @@
 <div *ngIf="nav.visible" class="main-nav">
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+  <!--<nav class="navbar navbar-expand-md navbar-light bg-light mb-4">-->
+  <!--<nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">-->
+  <nav class="navbar navbar-expand-md navbar-light">
     <a class="navbar-image" [routerLink]="['/home']">
       <img src="/dist/logo.png" alt="Gruppenplaner"/>
     </a>
