--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.scss
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.scss
@@ -1,5 +1,7 @@
 .main-nav {
-  height: 70px;
+  height: 50px;
+  display: block;
+  margin-bottom: 10px;
 }
 
 .navbar-image {
@@ -8,10 +10,99 @@
   left: 0;
   right: 0;
   z-index: 1;
-  margin: 15px 10px 15px 0px;
 }
 
+.navbar {
+  overflow: hidden;
+
+  bottom: 0;
+  width: 100%;
+
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 0px;
+
+  background-color: rgb(51, 135, 253);
+
+  /*ul {
+    float: left;
+  }
+
+  li {
+    float: left;
+    margin: 2px;
+    width: 100%;
+
+
+    a {
+      padding: 10px 16px 5px 0px;
+      border-radius: 4px;
+
+      i {
+        padding-left: 0px;
+        margin-right: 10px;
+      }
+
+    }
+  }*/
+}
+
+/* Auflösung > 576px */
 @media (min-width: 576px) {
+
+  .main-nav {
+    height: 50px;
+    width: 100%;
+    margin-bottom: 10px;
+    display: block;
+  }
+
+  .navbar-image {
+    padding-right: 15px;
+  }
+
+
+  .navbar {
+    overflow: hidden;
+
+
+    bottom: 0;
+    width: 100%;
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 0px;
+
+    background-color: rgb(51, 135, 253);
+
+    ul {
+      float: none;
+
+    }
+
+    /*ul {
+      float: left;
+    }
+
+    li {
+      float: left;
+      margin: 2px;
+      width: 100%;
+
+
+      a {
+        padding: 10px 16px 5px 0px;
+
+
+        i {
+          padding: 10px 16px 5px 0px;
+          margin: 10px 16px 5px 0px;
+        }
+
+      }
+    }*/
+  }
+}
+
+/*@media (min-width: 576px) {
   .main-nav {
     top: 0px;
     width: 100%;
@@ -44,4 +135,4 @@
       padding: 0px;
     }
   }
-}
+}*/
