20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.scss
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.scss
@@ -12,38 +12,36 @@
   z-index: 1;
 }
 
+.navbar-brand {
+  color: white;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: white;
+}
+
+.navbar-default .navbar-nav .nav-link {
+  color: white;
+}
+
+.navbar-default .navbar-nav .nav-link:hover {
+    color: #000acb;
+  }
+
+.navbar-default .navbar-nav .nav-link:focus {
+  color: aqua;
+}
+
 .navbar {
   overflow: hidden;
-
   bottom: 0;
   width: 100%;
+  z-index: 9;
 
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 0px;
 
   background-color: rgb(51, 135, 253);
-
-  /*ul {
-    float: left;
-  }
-
-  li {
-    float: left;
-    margin: 2px;
-    width: 100%;
-
-
-    a {
-      padding: 10px 16px 5px 0px;
-      border-radius: 4px;
-
-      i {
-        padding-left: 0px;
-        margin-right: 10px;
-      }
-
-    }
-  }*/
 }
 
 /* Auflösung > 576px */
@@ -60,13 +58,11 @@
     padding-right: 15px;
   }
 
-
   .navbar {
     overflow: hidden;
-
-
     bottom: 0;
     width: 100%;
+    z-index: 9;
 
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 0px;
@@ -75,64 +71,6 @@
 
     ul {
       float: none;
-
     }
-
-    /*ul {
-      float: left;
-    }
-
-    li {
-      float: left;
-      margin: 2px;
-      width: 100%;
-
-
-      a {
-        padding: 10px 16px 5px 0px;
-
-
-        i {
-          padding: 10px 16px 5px 0px;
-          margin: 10px 16px 5px 0px;
-        }
-
-      }
-    }*/
   }
 }
-
-/*@media (min-width: 576px) {
-  .main-nav {
-    top: 0px;
-    width: 100%;
-    min-width: 180px;
-
-    .navbar {
-      height: 50px;
-
-      ul {
-        float: left;
-      }
-
-      li {
-        float: left;
-        font-size: 16px;
-        margin: 6px;
-        a {
-          padding: 10px 16px;
-          border-radius: 4px;
-        }
-      }
-    }
-
-    .navbar-header {
-      float: left;
-      display: none;
-    }
-
-    .navbar-collapse {
-      padding: 0px;
-    }
-  }
-}*/
