--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-liste.component.html
@@ -4,44 +4,42 @@
     <table class="table table-hover questions">
       <thead>
       <tr>
-        <th>ID</th>
-        <th>IdTermin</th>
+        <th *ngIf="isWideScreen">ID</th>
+        <th *ngIf="isWideScreen">IdTermin</th>
         <th>Beginn</th>
-        <th>Ende</th>
-        <th>Gruppe</th>
+        <th *ngIf="!isSmScrPrt">Ende</th>
+        <th *ngIf="isWideScreen">Gruppe</th>
         <th>Teilnehmer</th>
-        <th>Akt Code</th>
-        <th>GanzerTag</th>
-        <th>Dauer unbestimmt</th>
-        <th>Akt Beginn</th>
-        <th>Akt Ende</th>
-        <th>Hinweis</th>
+        <th *ngIf="isWideScreen">Akt Code</th>
+        <th *ngIf="isMidScreen || isWideScreen">GanzerTag</th>
+        <th *ngIf="isWideScreen">Dauer unbestimmt</th>
+        <th *ngIf="!isSmScrPrt">Akt Beginn</th>
+        <th *ngIf="!isSmScrPrt">Akt Ende</th>
+        <!--<th *ngIf="isWideScreen">Hinweis</th>-->
         <th></th>
         <th></th>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let termin of termine">
-        <td>{{termin.Id}}</td>
-        <td>{{termin.IdTermin}}</td>
+        <td *ngIf="isWideScreen">{{termin.Id}}</td>
+        <td *ngIf="isWideScreen">{{termin.IdTermin}}</td>
         <td>{{termin.DatumBeginn | date: 'dd.MM.yy'}}</td>
-        <td>{{termin.DatumEnde | date: 'dd.MM.yy'}}</td>
-        <td>{{termin.GrpCode}}</td>
+        <td *ngIf="!isSmScrPrt">{{termin.DatumEnde | date: 'dd.MM.yy'}}</td>
+        <td *ngIf="isWideScreen">{{termin.GrpCode}}</td>
         <td>{{termin.TnVorname}} {{termin.TnNachname}}</td>
-        <td style="text-align:center;"> {{termin.AktCode}}</td>
-        <td style="text-align:center;"><input type="checkbox"  [checked]="termin.GanzerTag" onclick="return false;"/></td>
-        <td style="text-align:center;"><input type="checkbox"  [checked]="termin.ZeitUnbestimmt" onclick="return false;"/></td>
-        <td *ngIf="termin.GanzerTag"></td>
-        <td *ngIf="termin.GanzerTag"></td>
-        <td *ngIf="!termin.GanzerTag">{{termin.DatumBeginn | date: 'HH:mm'}}</td>
-        <td *ngIf="!termin.GanzerTag">{{termin.DatumEnde | date: 'HH:mm'}}</td>
-        <td>{{termin.Hinweis}}</td>
+        <td  *ngIf="isWideScreen" style="text-align:center;"> {{termin.AktCode}}</td>
+        <td  *ngIf="isMidScreen || isWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="termin.GanzerTag" onclick="return false;"/></td>
+        <td  *ngIf="isWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="termin.ZeitUnbestimmt" onclick="return false;"/></td>
+        <td *ngIf="!termin.GanzerTag && !isSmScrPrt">{{termin.DatumBeginn | date: 'HH:mm'}}</td>
+        <td *ngIf="!termin.GanzerTag && !isSmScrPrt">{{termin.DatumEnde | date: 'HH:mm'}}</td>
+        <!--<td *ngIf="isWideScreen">{{termin.Hinweis}}</td>-->
         <td>
           <button type="submit"
                   (click)="onEdit(termin)"
                   class="btn btn-sm btn-success">
             <i class="fas fa-edit"></i>
-            Edit
+            <a *ngIf="isMidScreen || isWideScreen"> Edit</a>
           </button>
         </td>
         <td>
@@ -49,7 +47,7 @@
                   (click)="onDelete(termin)"
                   class="btn btn-sm btn-danger">
             <i class="fas fa-trash-alt"></i>
-            Löschen
+            <a *ngIf="isMidScreen || isWideScreen"> Löschen</a>
           </button>
         </td>
       </tr>
