--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -11,34 +11,30 @@
   right: 0;
   z-index: 1; }
 
+.navbar-brand {
+  color: white; }
+
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: white; }
+
+.navbar-default .navbar-nav .nav-link {
+  color: white; }
+
+.navbar-default .navbar-nav .nav-link:hover {
+  color: #000acb; }
+
+.navbar-default .navbar-nav .nav-link:focus {
+  color: aqua; }
+
 .navbar {
   overflow: hidden;
   bottom: 0;
   width: 100%;
+  z-index: 9;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 0px;
-  background-color: #3387fd;
-  /*ul {
-    float: left;
-  }
-
-  li {
-    float: left;
-    margin: 2px;
-    width: 100%;
-
-
-    a {
-      padding: 10px 16px 5px 0px;
-      border-radius: 4px;
-
-      i {
-        padding-left: 0px;
-        margin-right: 10px;
-      }
-
-    }
-  }*/ }
+  background-color: #3387fd; }
 
 /* Auflösung > 576px */
 @media (min-width: 576px) {
@@ -55,65 +51,11 @@
     overflow: hidden;
     bottom: 0;
     width: 100%;
+    z-index: 9;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 0px;
-    background-color: #3387fd;
-    /*ul {
-      float: left;
-    }
-
-    li {
-      float: left;
-      margin: 2px;
-      width: 100%;
-
-
-      a {
-        padding: 10px 16px 5px 0px;
-
-
-        i {
-          padding: 10px 16px 5px 0px;
-          margin: 10px 16px 5px 0px;
-        }
-
-      }
-    }*/ }
+    background-color: #3387fd; }
     .navbar ul {
       float: none; } }
-/*@media (min-width: 576px) {
-  .main-nav {
-    top: 0px;
-    width: 100%;
-    min-width: 180px;
-
-    .navbar {
-      height: 50px;
-
-      ul {
-        float: left;
-      }
-
-      li {
-        float: left;
-        font-size: 16px;
-        margin: 6px;
-        a {
-          padding: 10px 16px;
-          border-radius: 4px;
-        }
-      }
-    }
-
-    .navbar-header {
-      float: left;
-      display: none;
-    }
-
-    .navbar-collapse {
-      padding: 0px;
-    }
-  }
-}*/
 
 /*# sourceMappingURL=nav-menu.component.css.map */
