20190104: wie 20190103, aber neu werden Breakpointänderungen live aktualisiert (erstmal bei Komp. "termin-liste")           -> neu: globale Variablen via Angular dependency injection (Singleton in AppModule)           -> Breakpoints werden in AppModule über den Window-Resizeevent aktualisiert 20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-liste.component.html
@@ -1,20 +1,24 @@
 <h3>Termine</h3>
+<a *ngIf="globals.bp_isSmScreen">SmScreen</a>
+<a *ngIf="globals.bp_isSmScrPrt">SmScrPrt</a>
+<a *ngIf="globals.bp_isMidScreen">MidScreen</a>
+<a *ngIf="globals.bp_isWideScreen">WideScreen</a>
 <div *ngIf="termine.length > 0">
   <div class="table-responsive">
     <table class="table table-hover questions">
       <thead>
       <tr>
-        <th *ngIf="isWideScreen">ID</th>
-        <th *ngIf="isWideScreen">IdTermin</th>
+        <th *ngIf="globals.bp_isWideScreen">ID</th>
+        <th *ngIf="globals.bp_isWideScreen">IdTermin</th>
         <th>Beginn</th>
-        <th *ngIf="!isSmScrPrt">Ende</th>
-        <th *ngIf="isWideScreen">Gruppe</th>
+        <th *ngIf="!globals.bp_isSmScrPrt">Ende</th>
+        <th *ngIf="globals.bp_isWideScreen">Gruppe</th>
         <th>Teilnehmer</th>
-        <th *ngIf="isWideScreen">Akt Code</th>
-        <th *ngIf="isMidScreen || isWideScreen">GanzerTag</th>
-        <th *ngIf="isWideScreen">Dauer unbestimmt</th>
-        <th *ngIf="!isSmScrPrt">Akt Beginn</th>
-        <th *ngIf="!isSmScrPrt">Akt Ende</th>
+        <th *ngIf="globals.bp_isWideScreen">Akt Code</th>
+        <th *ngIf="globals.bp_isMidScreen || globals.bp_isWideScreen">GanzerTag</th>
+        <th *ngIf="globals.bp_isWideScreen">Dauer unbestimmt</th>
+        <th *ngIf="!globals.bp_isSmScrPrt">Akt Beginn</th>
+        <th *ngIf="!globals.bp_isSmScrPrt">Akt Ende</th>
         <!--<th *ngIf="isWideScreen">Hinweis</th>-->
         <th></th>
         <th></th>
@@ -22,24 +26,24 @@
       </thead>
       <tbody>
       <tr *ngFor="let termin of termine">
-        <td *ngIf="isWideScreen">{{termin.Id}}</td>
-        <td *ngIf="isWideScreen">{{termin.IdTermin}}</td>
+        <td *ngIf="globals.bp_isWideScreen">{{termin.Id}}</td>
+        <td *ngIf="globals.bp_isWideScreen">{{termin.IdTermin}}</td>
         <td>{{termin.DatumBeginn | date: 'dd.MM.yy'}}</td>
-        <td *ngIf="!isSmScrPrt">{{termin.DatumEnde | date: 'dd.MM.yy'}}</td>
-        <td *ngIf="isWideScreen">{{termin.GrpCode}}</td>
+        <td *ngIf="!globals.bp_isSmScrPrt">{{termin.DatumEnde | date: 'dd.MM.yy'}}</td>
+        <td *ngIf="globals.bp_isWideScreen">{{termin.GrpCode}}</td>
         <td>{{termin.TnVorname}} {{termin.TnNachname}}</td>
-        <td  *ngIf="isWideScreen" style="text-align:center;"> {{termin.AktCode}}</td>
-        <td  *ngIf="isMidScreen || isWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="termin.GanzerTag" onclick="return false;"/></td>
-        <td  *ngIf="isWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="termin.ZeitUnbestimmt" onclick="return false;"/></td>
-        <td *ngIf="!termin.GanzerTag && !isSmScrPrt">{{termin.DatumBeginn | date: 'HH:mm'}}</td>
-        <td *ngIf="!termin.GanzerTag && !isSmScrPrt">{{termin.DatumEnde | date: 'HH:mm'}}</td>
+        <td  *ngIf="globals.bp_isWideScreen" style="text-align:center;"> {{termin.AktCode}}</td>
+        <td  *ngIf="globals.bp_isMidScreen || bp_isWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="termin.GanzerTag" onclick="return false;"/></td>
+        <td  *ngIf="globals.bp_isWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="termin.ZeitUnbestimmt" onclick="return false;"/></td>
+        <td *ngIf="!termin.GanzerTag && !globals.bp_isSmScrPrt">{{termin.DatumBeginn | date: 'HH:mm'}}</td>
+        <td *ngIf="!termin.GanzerTag && !globals.bp_isSmScrPrt">{{termin.DatumEnde | date: 'HH:mm'}}</td>
         <!--<td *ngIf="isWideScreen">{{termin.Hinweis}}</td>-->
         <td>
           <button type="submit"
                   (click)="onEdit(termin)"
                   class="btn btn-sm btn-success">
             <i class="fas fa-edit"></i>
-            <a *ngIf="isMidScreen || isWideScreen"> Edit</a>
+            <a *ngIf="globals.bp_isMidScreen || globals.bp_isWideScreen"> Edit</a>
           </button>
         </td>
         <td>
@@ -47,7 +51,7 @@
                   (click)="onDelete(termin)"
                   class="btn btn-sm btn-danger">
             <i class="fas fa-trash-alt"></i>
-            <a *ngIf="isMidScreen || isWideScreen"> Löschen</a>
+            <a *ngIf="globals.bp_isMidScreen || globals.bp_isWideScreen"> Löschen</a>
           </button>
         </td>
       </tr>
