20190114: Commit 20190104: wie 20190103, aber neu werden Breakpointänderungen live aktualisiert (erstmal bei Komp. "termin-liste")           -> neu: globale Variablen via Angular dependency injection (Singleton in AppModule)           -> Breakpoints werden in AppModule über den Window-Resizeevent aktualisiert 20190103: Breakpoint-Handling, Ein-/Ausblenden von Spalten je nach Breakpoints 20190102: NavBar-Feintuning und Breakpoint-Observable für das Ein-Ausblenden der Navbar je nach Formular 20181230: neuer NavbarService um Hauptmenu per TS-Script ein-/auszuschalten 20181230: Termin-Edit Design erweitert 20181229: Termin-Edit neues Design 20181221: v.a. Codebereinigungen 20181216: Terminwiederholungen nun auch über eine Zeitspanne von mehreren Tagen und löschen mehrere verbundenere Termine -> (IdTermin) 20181215: Termin mit Speicherung von Wiederholungen 20181214: mit Flag Ganztägig bei Codes Aktivitäten und Termin 20181214: Termin-Edit mit Anzeige "Wiederholungen"

--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
@@ -7,14 +7,14 @@
       <tr>
         <th>Code</th>
         <th>Bezeichnung</th>
-        <th>Gruppe</th>
-        <th>GanzerTag</th>
-        <th>Dauer unbestimmt</th>
-        <th>ShowZeiten</th>
-        <th>Beginn</th>
-        <th>Ende</th>
-        <th></th>
-        <th>Summieren</th>
+        <th *ngIf="globals.bp_isMidOrWideScreen">Gruppe</th>
+        <th *ngIf="globals.bp_isMidOrWideScreen">GanzerTag</th>
+        <th *ngIf="globals.bp_isMidOrWideScreen">Dauer unbestimmt</th>
+        <th *ngIf="globals.bp_isMidOrWideScreen">ShowZeiten</th>
+        <th *ngIf="globals.bp_isMidOrWideScreen">Beginn</th>
+        <th *ngIf="globals.bp_isMidOrWideScreen">Ende</th>
+        <th *ngIf="globals.bp_isMidOrWideScreen"></th>
+        <th *ngIf="globals.bp_isMidOrWideScreen">Summieren</th>
         <th></th>
         <th></th>
         <th></th>
@@ -24,24 +24,26 @@
       <tr *ngFor="let aktivitaet of code_aktivitaeten">
         <td>{{aktivitaet.Code}}</td>
         <td>{{aktivitaet.Bezeichnung}}</td>
-        <td>{{aktivitaet.GruppeCode}}</td>
-        <td style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.GanzerTag" onclick="return false;"/></td>
-        <td style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.ZeitUnbestimmt" onclick="return false;"/></td>
-        <td style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.ShowZeiten" onclick="return false;"/></td>
-        <td *ngIf="aktivitaet.ShowZeiten">{{aktivitaet.ZeitBeginn | date: 'HH:mm'}}</td>
-        <td *ngIf="aktivitaet.ShowZeiten">{{aktivitaet.ZeitEnde | date: 'HH:mm'}}</td>
-        <td *ngIf="!aktivitaet.ShowZeiten"></td>
-        <td *ngIf="!aktivitaet.ShowZeiten"></td>
-        <td>
+        <td *ngIf="globals.bp_isMidOrWideScreen">{{aktivitaet.GruppeCode}}</td>
+        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.GanzerTag" onclick="return false;"/></td>
+        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.ZeitUnbestimmt" onclick="return false;"/></td>
+        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.ShowZeiten" onclick="return false;"/></td>
+        <td *ngIf="globals.bp_isMidOrWideScreen && aktivitaet.ShowZeiten">{{aktivitaet.ZeitBeginn | date: 'HH:mm'}}</td>
+        <td *ngIf="globals.bp_isMidOrWideScreen && aktivitaet.ShowZeiten">{{aktivitaet.ZeitEnde | date: 'HH:mm'}}</td>
+        <td *ngIf="globals.bp_isMidOrWideScreen && !aktivitaet.ShowZeiten"></td>
+        <td *ngIf="globals.bp_isMidOrWideScreen && !aktivitaet.ShowZeiten"></td>
+        <td *ngIf="globals.bp_isMidOrWideScreen">
           <p class="square" [style.background-color]=[aktivitaet.Farbe]></p>
         </td>
-        <td style="text-align:center;"><input type="checkbox"  [checked]="aktivitaet.Summieren" onclick="return false;"/></td>
+        <td *ngIf="globals.bp_isMidOrWideScreen" style="text-align:center;">
+          <input type="checkbox"  [checked]="aktivitaet.Summieren" onclick="return false;"/>
+        </td>
         <td>
           <button type="submit"
                   (click)="onEdit(aktivitaet)"
                   class="btn btn-sm btn-success">
             <i class="fas fa-edit"></i>
-            Edit
+            <a *ngIf="globals.bp_isMidOrWideScreen"> Ändern</a>
           </button>
         </td>
         <td>
@@ -49,7 +51,7 @@
                   (click)="onDelete(aktivitaet)"
                   class="btn btn-sm btn-danger">
             <i class="fas fa-trash-alt"></i>
-            Löschen
+            <a *ngIf="globals.bp_isMidOrWideScreen"> Löschen</a>
           </button>
         </td>
       </tr>
@@ -73,6 +75,7 @@
           class={{showDataJsonBtnClass}} >
     <i class={{showDataJsonBtnIcon}}></i>
     {{showDataJsonTitle}}
+    adsf
   </button>
 </div>
 
